--- a/index.html
+++ b/index.html
@@ -58,8 +58,9 @@
 		<div class="container">
 			<div class="row centered">
 				<div class="col-lg-12">
-					<h1>William T. Kelvin</h1>
-					<h3>Web Designer | kelvin@blacktie.co</h3>
+					<h1>Xiaoyong(Ryan) Sun
+					</h1>
+					<h3>Software engineering | sunxiaoyong2020@outlook.com</h3>
 				</div><!--/.col-lg-12 -->
 			</div><!--/.row -->
 		</div><!--/.container -->
