--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </header>
       <section>
-      <img src="680840100KB" height="250" width="250" alt="Xiaoyong(Ryan) Sun"></h3>
+      <img src="680840100KB.jpg" height="250" width="250" alt="Xiaoyong(Ryan) Sun"></h3>
       <p>I am currently an product manager of Chinatelecom<a href="http://www.ou.edu/cas/economics">Economics</a> at the <a href="http://www.ou.edu/">University of Oklahoma</a> and Research Affiliate at the <a href="https://www.iza.org/">Institute for the Study of Labor (IZA)</a>. I graduated with a PhD in <a href="http://econ.duke.edu">Economics</a> from <a href="http://www.duke.edu">Duke University</a> in May 2015.</p>
       <p>My research interests include labor economics, urban economics, the economics of education, and applications of machine learning.</p>
       </section>
