--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       </header>
       <section>
       <img src="680840100KB.jpg" height="250" width="220" alt="Xiaoyong(Ryan) Sun"></h3>
-      <p>I am now working in China Telecom Co., Ltd., which is one of the world's top 100 companies. I graduated with a Master in <a href="http://econ.duke.edu">Computer Science</a> from <a href="https://www.ncl.ac.uk/">Newcastle University</a> in Oct. 2018.</p>
+      <p>I am now working in China Telecom Co., Ltd., which is one of the world's top 100 companies. I graduated with a Master in Computer Science from <a href="https://www.ncl.ac.uk/">Newcastle University</a> in Oct. 2018.</p>
       <p>My research interests include applications of machine learning, information system and data mining.</p>
       </section>
     </div>
