--- a/research.html
+++ b/research.html
@@ -73,36 +73,36 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Tyler Ransom</h1>
-        <p>Assistant Professor of Economics<br>University of Oklahoma</p>
-        <p>Research Affiliate<br><a href="http://legacy.iza.org/en/webcontent/personnel/photos/index_html?key=24155">Institute for the Study of Labor (IZA)</a></p>
-    <h3><a href="https://tyleransom.github.io/">Home</a></h3>
-        <h3><a href="https://tyleransom.github.io/research.html">Research</a></h3>
+        <h1>Xiaoyong(Ryan) Sun</h1>
+        <p><br>Newcastle University</p>
+        <p>Soft Engineering<br>Chinatelecom</p>
+    <h3><a href="https://ryan623555007.github.io/">Home</a></h3>
+        <h3><a href="https://tyleransom.github.io/research.html">Project</a></h3>
     <h3><a href="https://tyleransom.github.io/research/CV.pdf">CV</a></h3>  
-        <h3><a href="https://tyleransom.github.io/code.html">Code</a></h3> 
-        <h3><a href="https://tyleransom.github.io/teaching.html">Teaching</a></h3> 
-        <h3><a href="https://tyleransom.github.io/personal.html">Personal</a></h3>
+        <!-- <h3><a href="https://tyleransom.github.io/code.html">Code</a></h3>  -->
+        <!-- <h3><a href="https://tyleransom.github.io/teaching.html">Teaching</a></h3>  -->
+        <!-- <h3><a href="https://tyleransom.github.io/personal.html">Personal</a></h3> -->
     <b>Social</b><br>
         <div class="social-row">
           <a href="mailto:ransom@ou.edu" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> Email</a><br>
-          <a href="https://scholar.google.com/citations?user=eohlTTcAAAAJ&hl=en" target="_blank"><i class="ai ai-fw ai-google-scholar-square"></i> Scholar</a><br>
+          <!-- <a href="https://scholar.google.com/citations?user=eohlTTcAAAAJ&hl=en" target="_blank"><i class="ai ai-fw ai-google-scholar-square"></i> Scholar</a><br>
           <a href="https://orcid.org/0000-0002-6910-0363"><i class="ai ai-fw ai-orcid-square"></i> ORCID</a><br>
-          <a href="http://ideas.repec.org/f/pra541.html"><i class="fa fa-fw fa-share-alt-square"></i> RePEc</a><br>
+          <a href="http://ideas.repec.org/f/pra541.html"><i class="fa fa-fw fa-share-alt-square"></i> RePEc</a><br> -->
           <a href="http://github.com/tyleransom"><i class="fa fa-fw fa-github-square"></i> GitHub</a><br>
-          <a href="http://twitter.com/tyleransom" class="author-social" target="_blank"><i class="fa fa-fw fa-twitter-square"></i> Twitter</a><br>
-          <a href="http://linkedin.com/in/tyleransom" class="author-social" target="_blank"><i class="fa fa-fw fa-linkedin-square"></i> LinkedIn</a><br>
+          <!-- <a href="http://twitter.com/tyleransom" class="author-social" target="_blank"><i class="fa fa-fw fa-twitter-square"></i> Twitter</a><br>
+          <a href="http://linkedin.com/in/tyleransom" class="author-social" target="_blank"><i class="fa fa-fw fa-linkedin-square"></i> LinkedIn</a><br> -->
           <br>
         </div>
         <br>
 
-    <p><b>Contact:</b><br>Department of Economics<br>University of Oklahoma<br>322 CCD1, 308 Cate Center Drive<br>Norman, OK 73072</p>
+    <p><b>Contact:</b><br>Hangzhou,China</p>
     <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
 
       </header>
       <section>
 
-    <h2><a id="published-papers-updated" class="anchor" href="#publications" aria-hidden="true"><span class="octicon octicon-link"></span></a>Published &amp; Forthcoming Papers</h2>
-    <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" href="https://tyleransom.github.io/research/WagesAcrossCohorts.pdf">Changes across Cohorts in Wage Returns to Schooling and Early Work Experiences</a> <br> with <a href="https://bschool.pepperdine.edu/about/people/faculty/jared-ashworth-professor-of-economics/">Jared Ashworth</a>, <a href="http://public.econ.duke.edu/~vjh3/">V. Joseph Hotz</a>, and <a href="http://www.amaurel.net/">Arnaud Maurel</a> <br>  <i>Journal of Labor Economics</i>, Forthcoming.  <br> Guest column at <a href="https://voxeu.org/article/wage-returns-schooling-and-early-work-experience"><i>VoxEU</i></a> <br><button class="accordion">
+    <h2><a id="Project" class="anchor" href="#publications" aria-hidden="true"><span class="octicon octicon-link"></span></a>Published &amp; Forthcoming Papers</h2>
+    <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" href="https://tyleransom.github.io/research/WagesAcrossCohorts.pdf">Urban Observatory Metadata Knowledge Graph</a> <br> working with <a href="https://sites.google.com/site/paolomissier/"><i> Polo Missier</i></a>  at <a href="https://www.ncl.ac.uk/"><i>Newcastle University</i></a> <br><button class="accordion">
       Abstract
     </button>
     <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p> This paper investigates the wage returns to schooling and actual early work experiences, and how these returns have changed over the past twenty years. Using the NLSY surveys, we develop and estimate a dynamic model of the joint schooling and work decisions that young men make in early adulthood, and quantify how they affect wages using a generalized Mincerian specification. Our results highlight the need to account for dynamic selection and changes in composition when analyzing changes in wage returns. In particular, we find that ignoring the selectivity of accumulated work experiences results in overstatement of the returns to education. </p></div>
