--- a/research.html
+++ b/research.html
@@ -77,8 +77,8 @@
         <p><br>Newcastle University</p>
         <p>Soft Engineering<br>Chinatelecom</p>
     <h3><a href="https://ryan623555007.github.io/">Home</a></h3>
-        <h3><a href="https://tyleransom.github.io/research.html">Project</a></h3>
-    <h3><a href="https://tyleransom.github.io/research/CV.pdf">CV</a></h3>  
+        <h3><a href="https://ryan623555007.github.io/research.html">Project</a></h3>
+    <h3><a href="https://ryan623555007.github.io/research/CV.pdf">CV</a></h3>  
         <!-- <h3><a href="https://tyleransom.github.io/code.html">Code</a></h3>  -->
         <!-- <h3><a href="https://tyleransom.github.io/teaching.html">Teaching</a></h3>  -->
         <!-- <h3><a href="https://tyleransom.github.io/personal.html">Personal</a></h3> -->
@@ -101,7 +101,7 @@
       </header>
       <section>
 
-    <h2><a id="Project" class="anchor" href="#publications" aria-hidden="true"><span class="octicon octicon-link"></span></a>Published &amp; Forthcoming Papers</h2>
+    <h2><a id="Project" class="anchor" href="#publications" aria-hidden="true"><span class="octicon octicon-link"></span></a>Project &amp; </h2>
     <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" href="https://tyleransom.github.io/research/WagesAcrossCohorts.pdf">Urban Observatory Metadata Knowledge Graph</a> <br> working with <a href="https://sites.google.com/site/paolomissier/"><i> Polo Missier</i></a>  at <a href="https://www.ncl.ac.uk/"><i>Newcastle University</i></a> <br><button class="accordion">
       Abstract
     </button>
