--- a/teaching.html
+++ b/teaching.html
@@ -4,7 +4,7 @@
   <script src="https://use.fontawesome.com/baff6f55f5.js"></script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Tyler Ransom by tyleransom</title>
+    <title>Tyler Ransom by ryan623555007</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -76,21 +76,21 @@
         <h1>Tyler Ransom</h1>
         <p>Assistant Professor of Economics<br>University of Oklahoma</p>
         <p>Research Affiliate<br><a href="http://legacy.iza.org/en/webcontent/personnel/photos/index_html?key=24155">Institute for the Study of Labor (IZA)</a></p>
-    <h3><a href="https://tyleransom.github.io/">Home</a></h3>
-        <h3><a href="https://tyleransom.github.io/research.html">Research</a></h3>
-    <h3><a href="https://tyleransom.github.io/research/CV.pdf">CV</a></h3>  
-        <h3><a href="https://tyleransom.github.io/code.html">Code</a></h3> 
-        <h3><a href="https://tyleransom.github.io/teaching.html">Teaching</a></h3> 
-        <h3><a href="https://tyleransom.github.io/personal.html">Personal</a></h3>
+    <h3><a href="https://ryan623555007.github.io/">Home</a></h3>
+        <h3><a href="https://ryan623555007.github.io/research.html">Research</a></h3>
+    <h3><a href="https://ryan623555007.github.io/research/CV.pdf">CV</a></h3>  
+        <h3><a href="https://ryan623555007.github.io/code.html">Code</a></h3> 
+        <h3><a href="https://ryan623555007.github.io/teaching.html">Teaching</a></h3> 
+        <h3><a href="https://ryan623555007.github.io/personal.html">Personal</a></h3>
     <b>Social</b><br>
         <div class="social-row">
           <a href="mailto:ransom@ou.edu" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> Email</a><br>
           <a href="https://scholar.google.com/citations?user=eohlTTcAAAAJ&hl=en" target="_blank"><i class="ai ai-fw ai-google-scholar-square"></i> Scholar</a><br>
           <a href="https://orcid.org/0000-0002-6910-0363"><i class="ai ai-fw ai-orcid-square"></i> ORCID</a><br>
           <a href="http://ideas.repec.org/f/pra541.html"><i class="fa fa-fw fa-share-alt-square"></i> RePEc</a><br>
-          <a href="http://github.com/tyleransom"><i class="fa fa-fw fa-github-square"></i> GitHub</a><br>
-          <a href="http://twitter.com/tyleransom" class="author-social" target="_blank"><i class="fa fa-fw fa-twitter-square"></i> Twitter</a><br>
-          <a href="http://linkedin.com/in/tyleransom" class="author-social" target="_blank"><i class="fa fa-fw fa-linkedin-square"></i> LinkedIn</a><br>
+          <a href="http://github.com/ryan623555007"><i class="fa fa-fw fa-github-square"></i> GitHub</a><br>
+          <a href="http://twitter.com/ryan623555007" class="author-social" target="_blank"><i class="fa fa-fw fa-twitter-square"></i> Twitter</a><br>
+          <a href="http://linkedin.com/in/ryan623555007" class="author-social" target="_blank"><i class="fa fa-fw fa-linkedin-square"></i> LinkedIn</a><br>
           <br>
         </div>
         <br>
@@ -101,10 +101,10 @@
       </header>
       <section>
       <!-- <h2>Teaching Statement</h2> -->
-      <!-- <p><a href="https://tyleransom.github.io/teaching/Teaching-Statement.pdf">Download (PDF)</a><br></p> -->
+      <!-- <p><a href="https://ryan623555007.github.io/teaching/Teaching-Statement.pdf">Download (PDF)</a><br></p> -->
       
       <h2>Teaching Experience</h2>
-      <p><a href="https://tyleransom.github.io/teaching/EvalsSummary.pdf">Overall Summary of Teaching Evaluations</a></p>
+      <p><a href="https://ryan623555007.github.io/teaching/EvalsSummary.pdf">Overall Summary of Teaching Evaluations</a></p>
      
       <hr />
       <h3>Instructor and Designer</h3>
@@ -112,16 +112,16 @@
       Undergraduate course on causal inference and policy debates in the US education system
       <ul>
        <li><a href="https://www.amazon.com/Economics-Education-Michael-Lovenheim/dp/0716777045">Textbook</a></li>
-       <li><a href="https://tyleransom.github.io/research/LectureCollegeMajorChoiceCh15p2.pdf">Slides on college major choice & consequences</a></li>
-       <li><a href="https://tyleransom.github.io/research/TenPrinciplesOfEconOfEd.pdf">10 Principles of the Economics of Education</a></li>
-       <li>Student course evaluations (<a href="https://tyleransom.github.io/teaching/EconOfEdEvalsF2017.pdf">Fall 2017</a>,<a href="https://tyleransom.github.io/teaching/EconOfEdEvalsS18.pdf">Spring 2018</a>,<a href="https://tyleransom.github.io/teaching/EconOfEdEvalsF18.pdf">Fall 2018</a>,<a href="https://tyleransom.github.io/teaching/EconOfEdEvalsF19.pdf">Fall 2019</a>)</li>
+       <li><a href="https://ryan623555007.github.io/research/LectureCollegeMajorChoiceCh15p2.pdf">Slides on college major choice & consequences</a></li>
+       <li><a href="https://ryan623555007.github.io/research/TenPrinciplesOfEconOfEd.pdf">10 Principles of the Economics of Education</a></li>
+       <li>Student course evaluations (<a href="https://ryan623555007.github.io/teaching/EconOfEdEvalsF2017.pdf">Fall 2017</a>,<a href="https://ryan623555007.github.io/teaching/EconOfEdEvalsS18.pdf">Spring 2018</a>,<a href="https://ryan623555007.github.io/teaching/EconOfEdEvalsF18.pdf">Fall 2018</a>,<a href="https://ryan623555007.github.io/teaching/EconOfEdEvalsF19.pdf">Fall 2019</a>)</li>
        <li>Other course materials available upon request</li>
       </ul>
       <h4><b>Econ 5970/5253: Data Science for Economists (University of Oklahoma, Spring 2018, Spring 2019)</b></h4>
       Master's course designed to build data science skills from the perspective of economics
       <ul>
-       <li>Course GitHub repository (<a href="https://github.com/tyleransom/DScourseS18">Spring 2018</a>,<a href="https://github.com/tyleransom/DScourseS19">Spring 2019</a>)</li>
-       <li>Student course evaluations (<a href="https://tyleransom.github.io/teaching/DSevalsS18.pdf">Spring 2018</a>,<a href="https://tyleransom.github.io/teaching/DSevalsS19.pdf">Spring 2019</a>),<a href="https://tyleransom.github.io/teaching/DSevalsS20.pdf">Spring 2020</a>)</li>
+       <li>Course GitHub repository (<a href="https://github.com/ryan623555007/DScourseS18">Spring 2018</a>,<a href="https://github.com/ryan623555007/DScourseS19">Spring 2019</a>)</li>
+       <li>Student course evaluations (<a href="https://ryan623555007.github.io/teaching/DSevalsS18.pdf">Spring 2018</a>,<a href="https://ryan623555007.github.io/teaching/DSevalsS19.pdf">Spring 2019</a>),<a href="https://ryan623555007.github.io/teaching/DSevalsS20.pdf">Spring 2020</a>)</li>
       </ul>
       <h4><b>Econ 4223: Econometric Analysis (University of Oklahoma, Fall 2018, Spring 2019, Fall 2019)</b></h4>
       Undergraduate introductory econometrics course
@@ -129,10 +129,10 @@
        <li><a href="https://www.amazon.com/gp/product/130527010X">Primary Textbook</a></li>
        <li><a href="http://urfie.net/">Secondary Textbook</a></li>
        <li><a href="http://r4ds.had.co.nz/">Additional Secondary Textbook</a></li>
-       <li>Collection of <a href="https://tyleransom.github.io/econometricslabs.html">in-class group labs</a> to help students get hands-on experience coding with R</li>
-       <li><a href="https://github.com/tyleransom/EconometricsLabs/blob/master/tidyRcheatsheet.pdf">Econometrics in R cheat sheet</a></li>
-       <li><a href="https://github.com/tyleransom/EconometricsLabs/blob/master/econometricsCheatSheet.pdf">Econometric theory cheat sheet</a></li>
-       <li>Student course evaluations (<a href="https://tyleransom.github.io/teaching/EconometricsEvalsF18.pdf">Fall 2018</a>,<a href="https://tyleransom.github.io/teaching/EconometricsEvalsS19.pdf">Spring 2019</a>,<a href="https://tyleransom.github.io/teaching/EconometricsEvalsF19.pdf">Fall 2019</a>),<a href="https://tyleransom.github.io/teaching/EconometricsEvalsS20.pdf">Spring 2020</a>)</li>
+       <li>Collection of <a href="https://ryan623555007.github.io/econometricslabs.html">in-class group labs</a> to help students get hands-on experience coding with R</li>
+       <li><a href="https://github.com/ryan623555007/EconometricsLabs/blob/master/tidyRcheatsheet.pdf">Econometrics in R cheat sheet</a></li>
+       <li><a href="https://github.com/ryan623555007/EconometricsLabs/blob/master/econometricsCheatSheet.pdf">Econometric theory cheat sheet</a></li>
+       <li>Student course evaluations (<a href="https://ryan623555007.github.io/teaching/EconometricsEvalsF18.pdf">Fall 2018</a>,<a href="https://ryan623555007.github.io/teaching/EconometricsEvalsS19.pdf">Spring 2019</a>,<a href="https://ryan623555007.github.io/teaching/EconometricsEvalsF19.pdf">Fall 2019</a>),<a href="https://ryan623555007.github.io/teaching/EconometricsEvalsS20.pdf">Spring 2020</a>)</li>
        <li>Other course materials available upon request</li>
       </ul>
       <h4><b>Causal Inference with R (hosted on <a href="https://www.datacamp.com/">DataCamp</a> with support from <a href="https://www.ebayinc.com/">eBay, Inc.</a>)</b></h4>
@@ -145,9 +145,9 @@
       <h4><b>Econ 360: Foundations of Matlab (Duke University, Summer 2012)</b></h4>
       This course is geared towards rising second-year PhD students in order to equip them with the quantitative skills required for courses and research beyond the first year of graduate school.
       <ul>
-       <li><a href="https://github.com/tyleransom/MatlabCourse">Course GitHub repository</a></li>
-       <li><a href="https://tyleransom.github.io/teaching/MatlabRatingsSu2012.pdf">Aggregated Course Ratings</a></li>
-       <li><a href="https://tyleransom.github.io/teaching/MatlabRatings.pdf">Individual Course Ratings</a></li>
+       <li><a href="https://github.com/ryan623555007/MatlabCourse">Course GitHub repository</a></li>
+       <li><a href="https://ryan623555007.github.io/teaching/MatlabRatingsSu2012.pdf">Aggregated Course Ratings</a></li>
+       <li><a href="https://ryan623555007.github.io/teaching/MatlabRatings.pdf">Individual Course Ratings</a></li>
       </ul>
       <h4><b>Introduction to the Julia programming language (Duke, Spring 2016, 2017)</b></h4>
       This 1-day workshop focused on introducing Julia as an alternative to existing programming languages. Participants engaged in hands-on examples and were instructed about best practices in Julia.
