--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
         <p>Computer Science<br>Newcastle University</p>
         <!-- <p>Research Affiliate<br><a href="http://legacy.iza.org/en/webcontent/personnel/photos/index_html?key=24155">Institute for the Study of Labor (IZA)</a></p> -->
     <h3><a href="https://ryan623555007.github.io/">Home</a></h3>
-        <h3><a href="https://tyleransom.github.io/research.html">project</a></h3>
-    <h3><a href="https://tyleransom.github.io/research/CV.pdf">CV</a></h3>  
+        <h3><a href="https://ryan623555007.github.io/project.html">project</a></h3>
+    <h3><a href="https://ryan623555007.github.io/research/CV.pdf">CV</a></h3>  
         <!-- <h3><a href="https://tyleransom.github.io/code.html">Code</a></h3>  -->
         <!-- <h3><a href="https://tyleransom.github.io/teaching.html">Teaching</a></h3>  -->
         <!-- <h3><a href="https://tyleransom.github.io/personal.html">Personal</a></h3> -->
