--- a/teaching.html
+++ b/teaching.html
@@ -77,7 +77,7 @@
         <p>Assistant Professor of Economics<br>University of Oklahoma</p>
         <p>Research Affiliate<br><a href="http://legacy.iza.org/en/webcontent/personnel/photos/index_html?key=24155">Institute for the Study of Labor (IZA)</a></p>
     <h3><a href="https://ryan623555007.github.io/">Home</a></h3>
-        <h3><a href="https://ryan623555007.github.io/research.html">Research</a></h3>
+        <h3><a href="https://ryan623555007.github.io/project.html">Research</a></h3>
     <h3><a href="https://ryan623555007.github.io/research/CV.pdf">CV</a></h3>  
         <h3><a href="https://ryan623555007.github.io/code.html">Code</a></h3> 
         <h3><a href="https://ryan623555007.github.io/teaching.html">Teaching</a></h3> 
