--- a/project.html
+++ b/project.html
@@ -102,7 +102,7 @@
       <section>
 
     <h2><a id="Project" class="anchor" href="#publications" aria-hidden="true"><span class="octicon octicon-link"></span></a>Projects </h2>
-    <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" >Urban Observatory Metadata Knowledge Graph</a> <br> working with <a href="https://sites.google.com/site/paolomissier/"><i> Polo Missier</i></a>  at <a href="https://www.ncl.ac.uk/"><i>Newcastle University</i></a> <br><button class="accordion">
+    <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" >Urban Observatory Metadata Knowledge Graph</a> <br> working with <a href="https://sites.google.com/site/paolomissier/"><i> Polo Missier</i></a>  <br>at <a href="https://www.ncl.ac.uk/"><i>Newcastle University</i></a> <br><button class="accordion">
       Abstract
     </button>
     <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p> The University of Newcastle has the largest Observatory in UK and astronomical data is open to the public. 357 sensors are installed in the city. However, the credibility of current astronomical data is not high enough, leading some companies to abandon the use of these data. In this project, we try to use the knowledge graph to describe the relationship between metadata and original data to improve the credibility of query result. </p></div>
@@ -111,7 +111,7 @@
     </button>
     <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p>We establish a query system to support a closed loop of the whole process, from search to graph. Users can query the knowledge graph and a data description in JSON format. I use regular expressions to clean up astronomical data. Then combined the relationship between data and metadata. Finally, encapsulating the data interface becomes an API open to the public. I try to use the query results to improve users' trust in astronomical data, so that more people can use these data in industrial production. Some companies use the astronomical data to predict future weather. A total of 1.4 billion data were downloaded 7 million times by 2020.</p></div>
   
-    <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" >Anti harassment AI competition</a>  at Chinatelecom <br><button class="accordion">
+    <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" >Anti harassment AI competition</a>  <br>at Chinatelecom <br><button class="accordion">
       Abstract
     </button>
     <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p> Covid-19 broke out all over the world in 2020. So many companies have to increase telephone sales to maintain revenue. However, this cause more harassing calls. I use machine learning algorithms to predict harassment calls and push reminders to users' mobile phones. </p></div>
