--- a/project.html
+++ b/project.html
@@ -75,7 +75,7 @@
       <header>
         <h1>Xiaoyong(Ryan) Sun</h1>
         <p><br>Newcastle University</p>
-        <p>Soft Engineering<br>Chinatelecom</p>
+        <!-- <p>Soft Engineering<br>Chinatelecom</p> -->
     <h3><a href="https://ryan623555007.github.io/">Home</a></h3>
         <h3><a href="https://ryan623555007.github.io/research.html">Projects</a></h3>
     <h3><a href="https://ryan623555007.github.io/research/CV.pdf">CV</a></h3>  
